@@ -7,8 +7,8 @@ import java.util.List;
 import java.util.Optional;
 
 import org.apache.ibatis.annotations.Mapper;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import top.bulgat.common.base.util.JsonUtils;
+import top.bulgat.common.base.util.StringUtils;
 import top.bulgat.migration.config.common.configcenter.ConfigCenterGateway;
 import top.bulgat.migration.config.common.model.dataobject.MigrationTaskConfig;
 
@@ -20,17 +20,14 @@ import top.bulgat.migration.config.common.model.dataobject.MigrationTaskConfig;
 @Mapper
 public class MigrationTaskConfigDAO {
 
-    private static final Logger log = LoggerFactory.getLogger(MigrationTaskConfigDAO.class);
     private static final String DATA_ID_PREFIX = "migration_task_";
     private static final String INDEX_DATA_ID = "migration_task_index";
     private static final String GROUP = ConfigCenterGateway.DEFAULT_GROUP;
 
     private final ConfigCenterGateway configCenterGateway;
-    private final ObjectMapper objectMapper;
 
-    public MigrationTaskConfigDAO(ConfigCenterGateway configCenterGateway, ObjectMapper objectMapper) {
+    public MigrationTaskConfigDAO(ConfigCenterGateway configCenterGateway) {
         this.configCenterGateway = configCenterGateway;
-        this.objectMapper = objectMapper;
     }
 
     /**
@@ -40,17 +37,12 @@ public class MigrationTaskConfigDAO {
      * @return 任务 DO，不存在时返回空
      */
     public Optional<MigrationTaskConfig> findByMigrationKey(String migrationKey) {
-        try {
-            var content = configCenterGateway.getConfig(DATA_ID_PREFIX + migrationKey, GROUP);
-            if (content.isEmpty() || content.get().isBlank()) {
-                return Optional.empty();
-            }
-            MigrationTaskConfig config = objectMapper.readValue(content.get(), MigrationTaskConfig.class);
-            return Optional.ofNullable(config);
-        } catch (Exception ex) {
-            throw new IllegalStateException(
-                    "failed to read migration task for migrationKey: " + migrationKey, ex);
+        var content = configCenterGateway.getConfig(DATA_ID_PREFIX + migrationKey, GROUP);
+        if (content.isEmpty() || StringUtils.isBlank(content.get())) {
+            return Optional.empty();
         }
+        MigrationTaskConfig config = JsonUtils.fromJson(content.get(), MigrationTaskConfig.class);
+        return Optional.ofNullable(config);
     }
 
     /**
@@ -59,15 +51,12 @@ public class MigrationTaskConfigDAO {
      * @return migrationKey 列表
      */
     public List<String> getTaskIndex() {
-        try {
-            var content = configCenterGateway.getConfig(INDEX_DATA_ID, GROUP);
-            if (content.isEmpty() || content.get().isBlank()) {
-                return new ArrayList<>();
-            }
-            return objectMapper.readValue(content.get(), new TypeReference<>() {});
-        } catch (Exception ex) {
-            throw new IllegalStateException("failed to read migration task index", ex);
+        var content = configCenterGateway.getConfig(INDEX_DATA_ID, GROUP);
+        if (content.isEmpty() || StringUtils.isBlank(content.get())) {
+            return new ArrayList<>();
         }
+        return JsonUtils.toList(content.get(),String.class);
+
     }
 
     /**
@@ -76,14 +65,9 @@ public class MigrationTaskConfigDAO {
      * @param config 任务 DO
      */
     public void save(MigrationTaskConfig config) {
-        try {
-            String content = objectMapper.writeValueAsString(config);
-            configCenterGateway.publish(DATA_ID_PREFIX + config.migrationKey(), GROUP, content);
-            updateTaskIndex(config.migrationKey(), true);
-        } catch (Exception ex) {
-            throw new IllegalStateException(
-                    "failed to save migration task for migrationKey: " + config.migrationKey(), ex);
-        }
+        String content = JsonUtils.toJson(config);
+        configCenterGateway.publish(DATA_ID_PREFIX + config.migrationKey(), GROUP, content);
+        updateTaskIndex(config.migrationKey(), true);
     }
 
     /**
@@ -97,17 +81,13 @@ public class MigrationTaskConfigDAO {
     }
 
     private void updateTaskIndex(String migrationKey, boolean add) {
-        try {
-            List<String> keys = getTaskIndex();
-            if (add && !keys.contains(migrationKey)) {
-                keys.add(migrationKey);
-            }
-            if (!add) {
-                keys.remove(migrationKey);
-            }
-            configCenterGateway.publish(INDEX_DATA_ID, GROUP, objectMapper.writeValueAsString(keys));
-        } catch (Exception ex) {
-            throw new IllegalStateException("failed to update migration task index", ex);
+        List<String> keys = getTaskIndex();
+        if (add && !keys.contains(migrationKey)) {
+            keys.add(migrationKey);
         }
+        if (!add) {
+            keys.remove(migrationKey);
+        }
+        configCenterGateway.publish(INDEX_DATA_ID, GROUP, JsonUtils.toJson(keys));
     }
 }
